# JamWide

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  JamWide.entitlements  README.md  install.sh  release.sh
.github/workflows/: build.yml  juce-build.yml
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-flac-lossless-codec/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-juce-scaffolding/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-UAT.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-njclient-audio-bridge/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-core-ui-panels/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-REVIEWS.md  04-UI-SPEC.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-mixer-ui-and-channel-controls/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-RESEARCH.md  05-REVIEWS.md  05-UI-SPEC.md  05-VALIDATION.md
.planning/phases/06-multichannel-output-routing/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-RESEARCH.md  06-REVIEWS.md  06-UI-SPEC.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/references/: INSTAMODE-VIDEO-SYNC-DESIGN.md  JAMTABA-DAW-SYNC-ANALYSIS.md  MCP-ASSESSMENT.md  OSC-EVALUATION.md  VIDEO-FEASIBILITY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
assets/: JamWide.tosc
build-release/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  imgui.vcxproj  imgui.vcxproj.filters  ninjam-clap.sln  ninjam-clap.vcxproj  ninjam-clap.vcxproj.filters  ninjam-threading.vcxproj  ninjam-threading.vcxproj.filters  ninjam-ui.vcxproj  ninjam-ui.vcxproj.filters  njclient.vcxproj  njclient.vcxproj.filters  wdl.vcxproj  wdl.vcxproj.filters
build-release/Release/: NINJAM.clap  NINJAM.exp
cmake/: increment-build-revision.cmake  run-pluginval.cmake
companion/: index.html  package-lock.json  package.json  playwright.config.ts  popout.html  style.css  vite.config.ts
companion/.planning/: REQUIREMENTS.md  ROADMAP.md
companion/e2e/: actual-vdo-buffer.spec.ts  mock-ws-server.ts  video-sync.spec.ts
companion/src/: main.ts  popout.ts  types.ts  ui.ts  ws-client.ts
docs/: _config.yml  documentation.md  download.md  faq.md  features.md  index.md  osc.md
docs/_layouts/: default.html
docs/video/: index.html  popout.html  vite.config.ts
juce/: JamWideJuceEditor.cpp  JamWideJuceEditor.h  JamWideJuceProcessor.cpp  JamWideJuceProcessor.h  NinjamRunThread.cpp  NinjamRunThread.h
juce/midi/: MidiConfigDialog.cpp  MidiConfigDialog.h  MidiLearnManager.cpp  MidiLearnManager.h  MidiMapper.cpp  MidiMapper.h  MidiStatusDot.cpp  MidiStatusDot.h  MidiTypes.h
juce/osc/: OscAddressMap.cpp  OscAddressMap.h  OscConfigDialog.cpp  OscConfigDialog.h  OscServer.cpp  OscServer.h  OscStatusDot.cpp  OscStatusDot.h
juce/ui/: BeatBar.cpp  BeatBar.h  ChannelStrip.cpp  ChannelStrip.h  ChannelStripArea.cpp  ChannelStripArea.h  ChatMessageModel.h  ChatPanel.cpp  ChatPanel.h  ConnectionBar.cpp  ConnectionBar.h  JamWideLookAndFeel.cpp  JamWideLookAndFeel.h  LicenseDialog.cpp  LicenseDialog.h  ServerBrowserOverlay.cpp  ServerBrowserOverlay.h  SessionInfoStrip.cpp  SessionInfoStrip.h  VbFader.cpp  VbFader.h  VuMeter.cpp  VuMeter.h
juce/video/: BrowserDetect.h  BrowserDetect_mac.mm  BrowserDetect_win.cpp  VideoCompanion.cpp  VideoCompanion.h  VideoPrivacyDialog.cpp  VideoPrivacyDialog.h
memory-bank/: activeContext.md  functional-design-clapNinjam.md  ninjam.code-workspace  plan-chat-room.md  plan-clapNinjamThreadingSync.md  progress.md  systemPatterns.md  technical-design-part1-core.md  technical-design-part2-clap.md  technical-design-part3-ui.md
scripts/: build.sh  generate_tosc.py  notarize.sh
src/: build_number.h
src/core/: mpb.cpp  mpb.h  netmsg.cpp  netmsg.h  njclient.cpp  njclient.h
src/crypto/: nj_crypto.cpp  nj_crypto.h
src/debug/: logging.h
src/net/: server_list.cpp  server_list.h
src/platform/: gui_context.h  gui_macos.mm  gui_win32.cpp  reaper_integration.h  reaper_integration.mm
src/plugin/: clap_entry.cpp  clap_entry_export.cpp  ninjam_plugin.h
src/threading/: run_thread.cpp  run_thread.h  spsc_payloads.h  spsc_ring.h  ui_command.h  ui_event.h
src/ui/: server_list_types.h  ui_chat.cpp  ui_chat.h  ui_connection.cpp  ui_connection.h  ui_latency_guide.cpp  ui_latency_guide.h  ui_local.cpp  ui_local.h  ui_main.cpp  ui_main.h  ui_master.cpp  ui_master.h  ui_meters.cpp  ui_meters.h  ui_remote.cpp  ui_remote.h  ui_server_browser.cpp  ui_server_browser.h  ui_state.h  ui_status.cpp  ui_status.h  ui_util.cpp  ui_util.h
tests/: test_block_queue_spsc.cpp  test_decode_media_buffer_spsc.cpp  test_decode_state_arming.cpp  test_decoder_prealloc.cpp  test_deferred_delete.cpp  test_encryption.cpp  test_flac_codec.cpp  test_local_channel_mirror.cpp  test_midi_mapping.cpp  test_njclient_atomics.cpp  test_osc_loopback.cpp  test_peer_churn_simulation.cpp  test_remote_user_mirror.cpp  test_spsc_state_updates.cpp  test_video_sync.cpp
wdl/: flacencdec.h  vorbisencdec.h
(+347 files in other folders)
